# nexus

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
.github/: REPOSITORY_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
bus/: .env.example  config.py  main.py  requirements.txt
bus/auth/: api_keys.py  invitations.py  jwt.py  user_store.py
bus/context/: store.py
bus/kafka/: consumer.py  dead_letter.py  default_topics.py  producer.py  topics.py
bus/models/: agent.py  message.py  pipeline.py  user.py
bus/pipeline/: tracker.py
bus/registry/: heartbeat_monitor.py  registry.py
bus/routers/: agents.py  auth.py  context.py  deadletter.py  keys.py  messages.py  pipelines.py  team.py  topics.py
bus/scripts/: cleanup_agents.py
bus/tests/: send_dlq_message.py  test_context.py  test_kafka.py  test_websocket.py
bus/websocket/: live.py
dashboard/: package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/components/: AgentCard.tsx  AgentDetailPanel.tsx  AuthGuard.tsx  MessageDetailModal.tsx  MessageFilterBar.tsx  MessageRow.tsx  (+9 more)
demo/: .env.example  README.md  nexus_local.py  requirements.txt  run.py
docs/: DEPLOY.md  docs.json  introduction.mdx  mint.json  quickstart.mdx
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/nexus_bus/: __init__.py  agent.py  consumer.py  context.py  exceptions.py  producer.py
sdk/python/tests/: test_agent.py  test_context.py  test_publish.py
(+66 files in other folders)
