[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-bus"
version = "0.1.0"
description = "Official Python SDK for the Nexus multi-agent coordination bus"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Akash", email = "cashnova10@gmail.com" },
]
keywords = ["nexus", "agents", "kafka", "multi-agent", "coordination"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.27.0",
  "kafka-python>=2.0.2",
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/Akash8585/nexus"
Repository = "https://github.com/Akash8585/nexus"
Documentation = "https://github.com/Akash8585/nexus/tree/main/sdk/python"

[tool.hatch.build.targets.wheel]
packages = ["nexus_bus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
